--- a/frontend/src/app/pages/home/home.page.html
+++ b/frontend/src/app/pages/home/home.page.html
@@ -1,7 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>Desafio Laravel + Angular</ion-title>
-
+    <ion-button slot="end"  (click)="dadosDaConta()" color="tertiary">Meu Perfil</ion-button>
+    <ion-button slot="end"  (click)="logout()" color="danger">Logout</ion-button>
   </ion-toolbar>
 </ion-header>
 
@@ -12,8 +13,96 @@
     </ion-card-header>
 
     <ion-card-content>
-      <ion-button color="primary">Perfils</ion-button>
-      <ion-button color="secondary">Usuários</ion-button>
+      <ion-button (click)="buscarPerfis()" color="primary">Perfils</ion-button>
+      <ion-button (click)="buscarUsuarios()" color="secondary">Usuários</ion-button>
+
+
+      <div *ngIf="exibirPerfis">
+        <h2>Perfis</h2>
+        <div *ngIf="is_admin">
+          <ion-button (click)="criarPerfil()" color="primary">Criar Perfil</ion-button>
+        </div>
+        <ion-list>
+          <ion-item *ngFor="let perfil of perfis">
+            <ion-grid>
+              <ion-row>
+                <ion-col size="6">
+                  <ion-label>
+                    <h3>{{ perfil.id }}</h3>
+                  </ion-label>
+                </ion-col>
+                <ion-col size="6">
+                  <ion-label>
+                    <h3>{{ perfil.name }}</h3>
+                  </ion-label>
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+            <div *ngIf="is_admin">
+              <ion-buttons (click)="editarPerfil(perfil.id)" slot="end">
+                <ion-button color="tertiary">
+                  Editar
+                </ion-button>
+                <ion-button (click)="excluirPerfil(perfil.id)" color="danger">
+                  Excluir
+                </ion-button>
+              </ion-buttons>
+          </div>
+          </ion-item>
+        </ion-list>
+      </div>
+
+
+
+      <div *ngIf="exibirUsuarios">
+        <h2>Usuários</h2>
+        <div *ngIf="is_admin">
+          <ion-button (click)="criarUsuario()" color="primary">Criar Usuário</ion-button>
+        </div>
+        <ion-list>
+          <ion-item *ngFor="let usuario of usuarios">
+            <ion-grid>
+              <ion-row>
+                <ion-col size="3">
+                  <ion-label>
+                    <h3>{{ usuario.id }}</h3>
+                  </ion-label>
+                </ion-col>
+                <ion-col size="3">
+                  <ion-label>
+                    <h3>{{ usuario.name }}</h3>
+                  </ion-label>
+                </ion-col>
+                <ion-col size="3">
+                  <ion-label>
+                    <h3>{{ usuario.email }}</h3>
+                  </ion-label>
+                </ion-col>
+                <ion-col size="3">
+                  <ion-label>
+                    <h3>{{ usuario.profile_id }}</h3>
+                  </ion-label>
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+            <div *ngIf="is_admin">
+              <ion-buttons  slot="end">
+                <ion-button (click)="editarUsuario(usuario.id)" color="tertiary">
+                  Editar
+                </ion-button>
+                <ion-button (click)="excluirUsuario(usuario.id)" color="danger">
+                  Excluir
+                </ion-button>
+              </ion-buttons>
+          </div>
+          </ion-item>
+        </ion-list>
+      </div>
     </ion-card-content>
+
   </ion-card>
+
+
+
+
 </ion-content>
