--- a/frontend/src/app/pages/login/login.page.html
+++ b/frontend/src/app/pages/login/login.page.html
@@ -8,14 +8,13 @@
 
       <ion-card-content>
         <ion-item>
-          <ion-input label="Email" type="email" id="userEmail" placeholder="email@domain.com"></ion-input>
+          <ion-input label="Email" [(ngModel)]="loginData.email" type="email" name="email" placeholder="email@domain.com"></ion-input>
         </ion-item>
         <ion-item>
-          <ion-input label="Senha" type="password" id="userPassword" value=""></ion-input>
+          <ion-input label="Senha" [(ngModel)]="loginData.password" type="password" name="password" value=""></ion-input>
         </ion-item>
 
         <ion-button size="full" color="tertiary" (click)="login()" shape="round">Login</ion-button>
-        <ion-button size="full" color="tertiary" (click)="registerPage()" shape="clear">Registrar</ion-button>
       </ion-card-content>
     </ion-card>
   </div>
