--- a/frontend/src/app/pages/usuario/usuario.page.html
+++ b/frontend/src/app/pages/usuario/usuario.page.html
@@ -27,7 +27,7 @@
         <ion-input label="Senha" [(ngModel)]="usuarioData.password" type="password" name="password" value=""></ion-input>
       </ion-item>
       <ion-item>
-        <ion-select [(ngModel)]="usuarioData.profile_id" label="Floating label" label-placement="floating">
+        <ion-select [(ngModel)]="usuarioData.profile_id" label="Perfil" label-placement="floating">
           <ion-select-option *ngFor="let perfil of perfis" [value]="perfil.id">{{perfil.name}}</ion-select-option>
         </ion-select>
       </ion-item>
