--- a/frontend/src/app/pages/home/home.page.html
+++ b/frontend/src/app/pages/home/home.page.html
@@ -13,7 +13,7 @@
     </ion-card-header>
 
     <ion-card-content>
-      <ion-button (click)="buscarPerfis()" color="primary">Perfils</ion-button>
+      <ion-button (click)="buscarPerfis()" color="primary">Perfis</ion-button>
       <ion-button (click)="buscarUsuarios()" color="secondary">Usuários</ion-button>
 
 
